<resources>
    <string name="app_name">Sneaker Store</string>
    <string name="navigation_drawer_open">Mở</string>
    <string name="navigation_drawer_close">Đóng</string>
    <string name="about">Giới thiệu</string>
    <string name="about_content">Lorem Ipsum chỉ đơn giản là một đoạn văn bản giả, được dùng vào việc trình bày và dàn trang phục vụ cho in ấn. Lorem Ipsum đã được sử dụng như một văn bản chuẩn cho ngành công nghiệp in ấn từ những năm 1500, khi một họa sĩ vô danh ghép nhiều đoạn văn bản với nhau để tạo thành một bản mẫu văn bản. Đoạn văn bản này không những đã tồn tại năm thế kỉ, mà khi được áp dụng vào tin học văn phòng, nội dung của nó vẫn không hề bị thay đổi. Nó đã được phổ biến trong những năm 1960 nhờ việc bán những bản giấy Letraset in những đoạn Lorem Ipsum, và gần đây hơn, được sử dụng trong các ứng dụng dàn trang, như Aldus PageMaker.</string>
    <string name="policy">Chính sách</string>
    <string name="policy_content">Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản. Lorem Ipsum có ưu điểm hơn so với đoạn văn bản chỉ gồm nội dung kiểu "Nội dung, nội dung, nội dung" là nó khiến văn bản giống thật hơn, bình thường hơn. Nhiều phần mềm thiết kế giao diện web và dàn trang ngày nay đã sử dụng Lorem Ipsum làm đoạn văn bản giả, và nếu bạn thử tìm các đoạn "Lorem ipsum" trên mạng thì sẽ khám phá ra nhiều trang web hiện vẫn đang trong quá trình xây dựng. Có nhiều phiên bản khác nhau đã xuất hiện, đôi khi do vô tình, nhiều khi do cố ý (xen thêm vào những câu hài hước hay thông tục).</string>
    <string name="warranty">Bảo hành</string>
    <string name="warranty_content">Trái với quan điểm chung của số đông, Lorem Ipsum không phải chỉ là một đoạn văn bản ngẫu nhiên. Người ta tìm thấy nguồn gốc của nó từ những tác phẩm văn học la-tinh cổ điển xuất hiện từ năm 45 trước Công Nguyên, nghĩa là nó đã có khoảng hơn 2000 tuổi. Một giáo sư của trường Hampden-Sydney College (bang Virginia - Mỹ) quan tâm tới một trong những từ la-tinh khó hiểu nhất, "consectetur", trích từ một đoạn của Lorem Ipsum, và đã nghiên cứu tất cả các ứng dụng của từ này trong văn học cổ điển, để từ đó tìm ra nguồn gốc không thể chối cãi của Lorem Ipsum. Thật ra, nó được tìm thấy trong các đoạn 1.10.32 và 1.10.33 của "De Finibus Bonorum et Malorum" (Đỉnh tối thượng của Cái Tốt và Cái Xấu) viết bởi Cicero vào năm 45 trước Công Nguyên. Cuốn sách này là một luận thuyết đạo lí rất phổ biến trong thời kì Phục Hưng. Dòng đầu tiên của Lorem Ipsum, "Lorem ipsum dolor sit amet..." được trích từ một câu trong đoạn thứ 1.10.32.</string>
    <string name="contact">Thông tin liên hệ</string>
    <string name="phone">Điện thoại: </string>
    <string name="phone_number">0765655532</string>
    <string name="email">Email: </string>
    <string name="email_address">1451010069huy@ou.edu.vn</string>
    <string name="address">Địa chỉ: </string>
    <string name="address_detail">371 Nguyễn Kiệm, Phường 3, Quận Gò Vấp</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_about">Giới thiệu</string>
    <string name="menu_contact">Liên hệ</string>
    <string name="check_out">Thanh toán</string>
    <string name="payment_info">Thông tin thanh toán: </string>
    <string name="temp">Tạm tính:</string>
    <string name="fee_ship">Phí giao hàng (mặc định):</string>
    <string name="coupon">Khuyến mãi:</string>
    <string name="total">Tổng cộng:</string>
    <string name="no_product_in_cart">Không có sản phẩm nào trong giỏ hàng !</string>
    <string name="adidas">Adidas</string>
    <string name="nike">Nike</string>
    <string name="converse">Converse</string>
    <string name="balenciaga">Balenciaga</string>
    <string name="payment_method">Hình thức giao hàng</string>
    <string name="coupon_info">Mã khuyến mãi</string>
    <string name="payment_online">Thanh toán online</string>
    <string name="cod">Thanh toán khi nhận hàng</string>
    <string name="coupon_1">BALENCIAGAINTERNATIONAL (Giảm 20%)</string>
    <string name="coupon_2">FREESHIP (Miễn phí giao hàng)</string>
    <string name="coupon_3">MUAHESOIDONG (Giảm 50%)</string>
    <string name="coupon_4">CONVERSECLASSIC (Giảm 15% cho sản phẩm Classic)</string>
    <string name="coupon_5">Không áp dụng coupon</string>
</resources>
