<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/spacing"
        android:paddingRight="@dimen/spacing"
        >
        <TextView
            android:id="@+id/lbContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="@dimen/spacing"
            android:paddingBottom="@dimen/spacing"
            />
        <LinearLayout
            android:id="@+id/lnPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/lbContact"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/spacing"
            android:paddingTop="@dimen/spacing_triple"
            android:paddingBottom="@dimen/spacing_triple"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/content"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/spacing_triple"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="@dimen/content"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/lnPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="@dimen/spacing_triple"
            android:paddingBottom="@dimen/spacing_triple"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/content"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/spacing_triple"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="@dimen/content"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/lnEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingTop="@dimen/spacing_triple"
            android:paddingBottom="@dimen/spacing_triple"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/content"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/spacing_triple"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_detail"
                android:textSize="@dimen/content"
                android:lineHeight="@dimen/content_height"
                />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>