<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="@dimen/spacing"
        android:paddingRight="@dimen/spacing"
        android:background="@android:color/white"
        >

        <TextView
            android:id="@+id/lbIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/lbIntroContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_content"
            android:textSize="@dimen/content"
            android:lineHeight="@dimen/content_height"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            app:layout_constraintTop_toBottomOf="@id/lbIntro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/lbPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/policy"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            app:layout_constraintTop_toBottomOf="@id/lbIntroContent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/lbPolicyContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_content"
            android:textSize="@dimen/content"
            android:lineHeight="@dimen/content_height"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            app:layout_constraintTop_toBottomOf="@id/lbPolicy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/lbWarranty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/warranty"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            app:layout_constraintTop_toBottomOf="@id/lbPolicyContent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/lbWarrantyContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warranty_content"
            android:textSize="@dimen/content"
            android:lineHeight="@dimen/content_height"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginBottom="@dimen/spacing"
            app:layout_constraintTop_toBottomOf="@id/lbWarranty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="@dimen/spacing_double"
            />
    </android.support.constraint.ConstraintLayout>
</ScrollView>