<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    >
    <RelativeLayout
        android:id="@+id/rlCartItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <ListView
            android:id="@+id/lvCartItem"
            android:layout_width="match_parent"
            android:layout_height="180dp" />
        <TextView
            android:id="@+id/txtCartItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_double"
            android:paddingLeft="@dimen/spacing"
            android:paddingRight="@dimen/spacing"
            android:textSize="@dimen/content"
            android:text="@string/no_product_in_cart"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorSecondary"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/spacing"
        android:paddingRight="@dimen/spacing"
        >
    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/lbPaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorSecondary"
                android:text="@string/payment_method"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                >
            </TextView>
            <RadioGroup
                android:id="@+id/rdgPaymentInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/rdCOD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cod"
                    android:layout_marginTop="@dimen/spacing_triple"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/rdCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_online"
                    android:layout_marginTop="@dimen/spacing_triple"
                    />
            </RadioGroup>
            <TextView
                android:id="@+id/lbPaymentInfo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorSecondary"
                android:text="@string/payment_info"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rdgPaymentInfo"
                >
            </TextView>
            <RelativeLayout
                android:id="@+id/temp1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                android:paddingTop="@dimen/spacing"
                android:paddingBottom="@dimen/spacing_haft"
                app:layout_constraintTop_toBottomOf="@id/lbPaymentInfo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    >
                </TextView>
                <TextView
                    android:id="@+id/txtTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/temp2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                android:paddingTop="@dimen/spacing_haft"
                android:paddingBottom="@dimen/spacing_haft"
                app:layout_constraintTop_toBottomOf="@id/temp1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee_ship"
                    android:textStyle="bold"
                    android:gravity="center_vertical">
                </TextView>
                <TextView
                    android:id="@+id/txtFeeShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/temp3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                android:paddingTop="@dimen/spacing_haft"
                android:paddingBottom="@dimen/spacing_haft"
                app:layout_constraintTop_toBottomOf="@id/temp2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon"
                    android:textStyle="bold"
                    android:gravity="center_vertical">
                </TextView>
                <TextView
                    android:id="@+id/txtCoupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/temp4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#fff"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                android:paddingTop="@dimen/spacing_haft"
                app:layout_constraintTop_toBottomOf="@id/temp3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:textColor="#555"
                    android:gravity="center_vertical">
                </TextView>
                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#555"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true">
                </TextView>
            </RelativeLayout>
            <TextView
                android:id="@+id/lbCoupon"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorSecondary"
                android:text="@string/coupon_info"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/spacing"
                android:paddingRight="@dimen/spacing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temp4"
                >
            </TextView>
            <RadioGroup
                android:id="@+id/rdgCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbCoupon"
                >
                <RadioButton
                    android:id="@+id/rdCoupon1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_1"
                    android:layout_marginTop="@dimen/spacing_triple"
                    />
                <RadioButton
                    android:id="@+id/rdCoupon2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_2"
                    android:layout_marginTop="@dimen/spacing_triple"
                    />
                <RadioButton
                    android:id="@+id/rdCoupon3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_3"
                    android:layout_marginTop="@dimen/spacing_triple"
                    />
                <RadioButton
                    android:id="@+id/rdCoupon4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_4"
                    android:layout_marginTop="@dimen/spacing_triple"
                    />
                <RadioButton
                    android:id="@+id/rdCoupon5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_5"
                    android:layout_marginTop="@dimen/spacing_triple"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/btnPayment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_double"
                android:background="@color/colorSemiPrimary"
                android:drawablePadding="12dp"
                android:text="@string/check_out"
                android:textColor="#fff"
                android:layout_marginTop="@dimen/spacing_haft"
                android:textSize="16dp"
                android:layout_marginLeft="@dimen/spacing"
                android:layout_marginRight="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing_double"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>